--- a/taskmanager/templates/categories.html
+++ b/taskmanager/templates/categories.html
@@ -19,28 +19,12 @@
                 <span class="card-title">{{ category.category_name }}</span>
             </div>
             <div class="card-action">
-                <a href="#" class="btn green accent-4">Edit</a>
+                <a href="{{ url_for('edit_category', category_id=category.id) }}" class="btn green accent-4">Edit</a>
                 <a href="#" class="btn red">Delete</a>
             </div>
         </div>
     </div>
     {% endfor %}
 </div>
-
-
-<div class="row">
-    <div class="col s12 m6 l3">
-      <div class="card blue-grey darken-1 center-align">
-        <div class="card-content white-text">
-          <span class="card-title">Card Title</span>
-
-        </div>
-        <div class="card-action">
-          <a href="#" class="btn green accent-4" >Edit</a>
-          <a href="#" class="btn red">Delete</a>
-        </div>
-      </div>
-    </div>
-  </div>
 
 {% endblock %}
